# cluster_generator

./: pyproject.toml  setup.py
cluster_generator/: codes.py  data_structures.py  fields.py  ics.py  model.py  particles.py  radial_profiles.py  utils.py  virial.py
cluster_generator/frontend/: api.py  data_structures.py  fields.py  io.py
cluster_generator/tests/: conftest.py  test_data_structures.py  test_ics.py  test_particles.py  test_radial_profiles.py  utils.py
